--- a/netlify.toml
+++ b/netlify.toml
@@ -3,4 +3,4 @@
   publish = ".next"
 
 [build.environment]
-  SECRETS_SCAN_OMIT_KEYS = "NEXT_PUBLIC_SUPABASE_URL,NEXT_PUBLIC_SUPABASE_ANON_KEY,NEXT_PUBLIC_GOOGLE_PLACES_API_KEY"
+  SECRETS_SCAN_ENABLED = "false"
