--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "framer-motion": "^12.23.26",
     "genkit": "^1.20.0",
     "html5-qrcode": "^2.3.8",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "lenis": "^1.3.17",
     "lucide-react": "^0.475.0",
     "matter-js": "^0.20.0",
